--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8f92ff">  <td>19/07/12 20:08:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;RegisterUser.beforeTest()[pri:0, instance:epam.com.automationPractice.RegisterUser@5c3bd550]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:44</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeTest()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="8f92ff">  <td>19/07/12 20:08:19</td>   <td>8813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUser.chooseSignIn()[pri:1, instance:epam.com.automationPractice.RegisterUser@5c3bd550]">chooseSignIn</td> 
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:44</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:46</td>   <td>2764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.launchTestAutomationGuruTest()[pri:1, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">launchTestAutomationGuruTest</td> 
   <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="8f92ff">  <td>19/07/12 20:08:20</td>   <td>10554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUser.createAnAccount()[pri:2, instance:epam.com.automationPractice.RegisterUser@5c3bd550]">createAnAccount</td> 
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:54</td>   <td>10957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:54</td>   <td>10957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.chooseSignIn()[pri:2, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">chooseSignIn</td> 
   <td>main@832947102</td>   <td></td> </tr>
-<tr bgcolor="8f92ff">  <td>19/07/12 20:08:21</td>   <td>10782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUser.persnalInformation()[pri:3, instance:epam.com.automationPractice.RegisterUser@5c3bd550]">persnalInformation</td> 
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:57</td>   <td>13630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:57</td>   <td>13630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.createAnAccount()[pri:3, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">createAnAccount</td> 
   <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:57</td>   <td>13863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/07/15 12:42:57</td>   <td>13863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.persnalInformation()[pri:4, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">persnalInformation</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/07/15 12:43:04</td>   <td>20369</td> <td>&nbsp;</td><td title="&lt;&lt;RegisterUserFactoryPattern.afterMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@5c3bd550]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
 </table>
