--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,19 +11,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createAnAccount</td>
+<td>addProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>persnalInformation</td>
+<td>launchTestAutomation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchTestAutomationGuruTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>chooseSignIn</td>
+<td>chooseLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
