--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeTest()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:18</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:21</td>   <td>2704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.chooseLogin()[pri:1, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">chooseLogin</td> 
-  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:21</td>   <td>2800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:21</td>   <td>2800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.launchTestAutomation()[pri:1, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">launchTestAutomation</td> 
-  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:28</td>   <td>10358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterUserFactoryPattern.beforeMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:28</td>   <td>10358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterUserFactoryPattern.addProduct()[pri:2, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">addProduct</td> 
-  <td>main@603856241</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>19/07/16 19:22:48</td>   <td>29673</td> <td>&nbsp;</td><td title="&lt;&lt;RegisterUserFactoryPattern.afterMethod()[pri:0, instance:epam.com.automationPractice.RegisterUserFactoryPattern@7113b13f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/07/19 15:30:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTestClass.beforeTest()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/07/19 15:30:02</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestClass.beforeMethod()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/07/19 15:30:04</td>   <td>2682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseTestClass.launchTestAutomation()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">launchTestAutomation</td> 
+  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/07/19 15:30:11</td>   <td>9495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestClass.beforeMethod()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="7c65a2">  <td>19/07/19 15:30:11</td>   <td>9495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginUser.chooseSignIn()[pri:1, instance:epam.com.automationPractice.LoginUser@45820e51]">chooseSignIn</td> 
+  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/07/19 15:30:11</td>   <td>9502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestClass.beforeMethod()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="7c65a2">  <td>19/07/19 15:30:11</td>   <td>9502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginUser.chooseLogin()[pri:2, instance:epam.com.automationPractice.LoginUser@45820e51]">chooseLogin</td> 
+  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="d0c87b">  <td>19/07/19 15:30:11</td>   <td>9505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestClass.beforeMethod()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="7c65a2">  <td>19/07/19 15:30:11</td>   <td>9505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginUser.addProduct()[pri:3, instance:epam.com.automationPractice.LoginUser@45820e51]">addProduct</td> 
+  <td>main@682376643</td>   <td></td> </tr>
+<tr bgcolor="7c65a2">  <td>19/07/19 15:30:11</td>   <td>9508</td> <td>&nbsp;</td><td title="&lt;&lt;LoginUser.afterMethod()[pri:0, instance:epam.com.automationPractice.LoginUser@45820e51]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@682376643</td>   <td></td> </tr>
 </table>
